# psycop-ml-utils

./: .darglint  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  api.model_performance.html  api.timeseriesflattener.html  api.writers.html  bc_raw_data_check.py  changelog.html  citation.cff  deepcheck_synth.py  faq.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  test_deepchecks.py
.github/: dependabot.yml  pull_request_template.md  release_please.yml
.github/actions/test/: action.yml
.github/workflows/: darglint.yml  dependabot_automerge.yml  documentation.yml  main_test_and_release.yml  pre-commit.yml  pytest.yml  release.yml  release_please.yml  test_prs.yml  upload-to.pypi.yml
_modules/: index.html
_modules/psycopmlutils/model_performance/: model_performance.html  utils.html
_modules/psycopmlutils/timeseriesflattener/: create_feature_combinations.html  flattened_dataset.html  resolve_multiple_functions.html
_modules/psycopmlutils/writers/: sql_writer.html
_static/: documentation_options.js
docs/: api.model_performance.rst  api.timeseriesflattener.rst  api.writers.rst  changelog.md  conf.py  faq.rst  index.rst  installation.md
example/: load_sql.py  test_create_df.py
example/loaders/: blood_sample.py  check_lab_result_loader.py  check_patient_for_duplicates.py  debug_loader_function.py  load_coercion.py  load_diagnoses.py  load_forced.py  load_forced_admissions_dfs_with_prediction_times_and_outcome.py  load_medications.py  load_physical_visits.py  load_sql.py
example/timeseriesflattener/: create_df.py  create_t2d_df.py  generate_features_and_write_to_disk.py  generate_features_and_write_to_sql.py  load_data.py  test_load_data.py
example/timeseriesflattener/t2d/: features_blood_samples.py  features_diagnoses.py  features_medications.py  generate_features_and_write_to_disk.py
src/: about.py
src/application/t2d/: check_feature_set_integrity.py  describe_features.py  features_blood_samples.py  features_diagnoses.py  features_medications.py  generate_features_and_write_to_disk.py
src/loaders/: demographics.py  diagnoses.py  lab_results.py  load_demographics.py  load_diagnoses.py  load_lab_results.py  load_medications.py  medications.py  str_utils.py  visits.py
src/psycop_ml_utils/: utils.py  utils_for_testing.py
src/psycop_ml_utils/loaders/synth/raw/: load_synth_data.py
src/psycop_ml_utils/sql/: writer.py
src/psycop_ml_utils/synth_data_generator/: synth_col_generators.py  synth_prediction_times_generator.py  synth_txt_data_generator.py
src/psycop_ml_utils/wandb/: wandb_try_except_decorator.py
src/psycopmlutils/: __init__.py  about.py  utils.py
src/psycopmlutils/data_checks/: feature_describer.py  utils.py  validate_raw_data.py
src/psycopmlutils/data_checks/flattened/: data_integrity.py  feature_describer.py
src/psycopmlutils/data_checks/raw/: check_predictor_lists.py  check_raw_df.py  validate_raw_data.py
src/psycopmlutils/feature_describer/: feature_describer.py
src/psycopmlutils/featurizers/: tfidf.py
src/psycopmlutils/loaders/: __init__.py  load_demographic.py  load_demographics.py  load_diagnoses.py  load_ids.py  load_lab_results.py  load_medications.py  load_outcomes.py  load_visits.py  non_numerical_coercer.py  sql_load.py  utils.py
src/psycopmlutils/loaders/flattened/: __init__.py  local_feature_loaders.py
src/psycopmlutils/loaders/raw/: __init__.py  check_feature_combination_formatting.py  check_raw_df.py  load_coercion.py  load_demographic.py  load_diagnoses.py  load_ids.py  load_lab_results.py  load_medications.py  load_outcomes.py  load_t2d_outcomes.py  load_text.py  load_visits.py  pre_load_dfs.py  sql_load.py  test_feature_combinations.py
src/psycopmlutils/loaders/synth/raw/: load_synth_data.py
src/psycopmlutils/model_comparison/: __init__.py  model_comparison.py  model_performance.py  model_plotter.py  streamlit_plotter.py  test_merged.jsonl  utils.py
src/psycopmlutils/model_performance/: __init__.py  model_performance.py  utils.py
src/psycopmlutils/synth_data_generator/: synth_col_generators.py  synth_data_generator.py  synth_prediction_times_generator.py  synth_txt_data_generator.py  utils.py
src/psycopmlutils/timeseriesflattener/: __init__.py  create_feature_combinations.py  data_integrity.py  flattened_dataset.py  resolve_multiple_functions.py
src/psycopmlutils/writers/: sql_writer.py
src/timeseriesflattener/: create_feature_combinations.py  flattened_dataset.py  permutate_features.py  resolve_multiple_functions.py
tests/: test_synth_data_generator.py
tests/helpers/: utils_for_testing.py
tests/test_check_raw_df/: test_check_raw_df.py
tests/test_data/: synth_prediction_data.csv  synth_txt_data.csv  test_nothing.py
tests/test_data/raw/: create_synth_prediction_times.py  create_synth_raw_binary.py  create_synth_raw_float.py  synth_raw_float.csv  synth_raw_float_1.csv  synth_raw_float_2.csv
tests/test_data/test_featurizers/: huggingface_model_id.pkl
tests/test_data/test_tfidf/: test_tfidf_vocab.py
tests/test_feature_describer/: test_feature_describer.py
tests/test_loaders/: test_non_numerical_coercion.py
tests/test_model_comparison/: agg_mfccs_eval.csv  agg_mfccs_eval.jsonl  test_compute_metrics.py  test_transform_dataframe.py
tests/test_model_performance/: test_compute_metrics.py  test_model_performance.py  test_transform_dataframe.py
tests/test_timeseriesflattener/: test_add_outcome.py  test_add_values.py  test_create_feature_combinations.py  test_errors.py  test_flattened_dataset_generation.py  test_is_within_n_days.py  test_min_date.py  test_permutate_features.py  test_resolve_multiple.py  test_time_handling.py  test_wrapper.py  utils_for_testing.py
tests/test_timeseriesflatterner/: test_add_outcome.py
