[project]
name = "psycopmlutils"
version = "0.3.1"
description = "A collection of machine-learning utilities used across the psycop-projects."
authors = [{name = "Martin Bernstorff", email = "martinbernstorff@gmail.com"},
    {name = "Lasse Hansen", email = "lasseh0310@gmail.com"},
    {name = "Kenneth Enevoldsen"}]

requires-python = ">=3.8.0"

classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
]

dependencies = [
    "pydantic>=1.9.0",
    "numpy>=1.23.3,<1.25.0",
    "scipy>=1.8.1,<1.10.0",
    "pandas>=1.4.4,<1.6.0",
    "catalogue>=2.0.8, <2.1.0",
    "wasabi>=0.9.0,<1.2.0",
    "scikit-learn>=1.1.2,<1.3.0",
    "srsly>=2.4.4, <2.5.0",
    "wandb>=0.12.7,<0.13.8",
    "psutil>=5.9.1, <6.0.0",
    "dill>=0.3.5,<0.3.7",
    "SQLAlchemy>=1.4.40,<1.4.46",
    "pyodbc>=4.0.34, <=4.1.0",
    "transformers>=4.22.0,<4.26.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.12.0",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "Sphinx>=5.3.0",
    "furo>=2022.6.4,<2022.12.8",
    "sphinx-copybutton>=0.5.0",
    "sphinxext-opengraph>=0.7.0",
    "myst-parser>=0.18.0",
    "flake8>=6.0.0",
    "docformatter>=1.4.0,<1.5.2",
    "mypy>=0.971,<0.992",
    "pytest-xdist>=3.0.2",
    "pre-commit>=2.20.0,<2.22.0",
]

[tool.coverage.run]
omit = [
    "**/tests/*",
    "**/_vendorized/*",
    "**/about.py",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.isort]
known_third_party = ["wandb"]

[tool.semantic_release]
branch = "main"
version_variable = [
    "pyproject.toml:version"
]
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.pylint]
load-plugins = "pylint.extensions.docparams,pylint.extensions.code_style,pylint.extensions.for_any_all,pylint.extensions.typing"
good-names = "df,p,f,d,e,n,k,i,v"
disable = "too-many-lines,line-too-long,missing-raises-doc,no-self-argument,unused-wildcard-import,wildcard-import,no-else-return,too-many-arguments,redefined-outer-name,import-outside-toplevel"

[tool.pyright] # Added because of weird pylance error, issue here: https://github.com/microsoft/pylance-release/issues/3366
